# editor

./: .gitignore  LICENSE  README.md  flake.nix  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.mts
.github/workflows/: build_test.yml  release.yml
src/: App.module.css  App.tsx  app.css
src-tauri/: Cargo.toml  rust-toolchain  tauri.conf.json
src-tauri/src/: fonts.rs  lib.rs  main.rs  packages.rs  projet.rs  utils.rs  world.rs
src/components/: Editor.tsx  Main.tsx  ModeLine.tsx  Sidebar.tsx  Toolbar.tsx  Vr.tsx
src/components/Main/: Editor.tsx  Preview.tsx
src/lib/: AppState.tsx
src/lib/components/: editor.svelte  render.svelte  tree.svelte
src/routes/: +layout.svelte  +page.svelte
src/styles/: App.module copy.css  App.module.css
test/template/: main.typ
test/template/bibliographie/: ABalloonTrajectoryPredictionSystem.bib  AProposDesBallons.bib  EusoBallon.bib  SondeMeteo.bib  analyseVent.bib  autorisation.bib  open_source_toolkit.bib  prediction.bib  reglement_europeen.bib  type_ballon.bib
test/template/template/: ESIR.typ
test/typ/: multiline.typ
