[package]
name = "editor"
version = "0.0.0"
description = ""
authors = ["Titouan LE DILAVREC", "Tom CHAUVEL", "Vianney HERVÉ"]
license = "MIT"
repository = "git@github.com:Cours-ESIR/editor.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "window-create", "dialog-open", "shell-open", "fs-write-file", "fs-read-dir", "dialog-save", "fs-read-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typst = { git = "https://github.com/typst/typst", version = "0.11.0" }
typst-pdf = { git = "https://github.com/typst/typst", version = "0.11.0" }
typst-render = { git = "https://github.com/typst/typst", version = "0.11.0" }
typst-svg = { git = "https://github.com/typst/typst", version = "0.11.0" }
typst-timing = { git = "https://github.com/typst/typst", version = "0.11.0" }
typst-syntax = { git = "https://github.com/typst/typst", version = "0.11.0" }
comemo = "0.4"
chrono = "0.4.33"
fontdb = "0.16.0"
log = "0.4.20"
env_logger = "0.11.1"
dirs = "5.0.1"
flate2 = "1.0.28"
tar = "0.4.40"
ureq = { version = "2", default-features = false, features = ["native-tls", "gzip"] }
clap = { version = "4.5.0", features = ["derive"] }
native-tls = "0.2.11"
env_proxy = "0.4.1"
once_cell = "1.19.0"


[features]
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "exemple"

[[bin]]
name = "project"
